Fix reset.css' 'remove list styling' feature
The ul/ol[role="list"] was originally provided for niche accessibility
reasons, but the styling wasn't working in my browser.

--- a/css/reset.css
+++ b/css/reset.css
@@ -17,8 +17,8 @@
 }
 
 /* Remove default list styling */
-ol[role="list"],
-ul[role="list"] {
+ol,
+ul {
     list-style: none;
     padding-inline: 0;
 }
