Add Temporary constraint for avatar image size

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,11 @@ header {
 main {
     grid-area: main;
 }
+
+/* Temporary constraint for avatar images during development */
+.avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
