Implement flex layout for header's system bar
 - Add flex display to system bar container
 - Set search form to take 70% of available space
 - Set user menu to take 30% of available space
 - Apply flex display to user menu for a horizontal layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,19 @@ header {
     flex-direction: column;
 }
 
+.system-bar {
+    display: flex;
+}
+
+form {
+    flex: 7;
+}
+
+.user-menu {
+    flex: 3;
+    display: flex;
+}
+
 main {
     grid-area: main;
 }
