Set widths for system bar's children with spacing
 - Form > input: 60% of system bar
 - user-menu: auto
 - Add 6rem padding to left/right of system bar
 - Add space between search bar and user menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,14 +28,19 @@ header {
 
 .system-bar {
     display: flex;
+    padding: 0 6rem;
+    justify-content: space-between;
 }
 
 form {
-    flex: 7;
+    width: 60%;
+}
+
+input {
+    width: 100%;
 }
 
 .user-menu {
-    flex: 3;
     display: flex;
 }
 
