Implement grid layout for user-greeting  - col1: Morgan's avatar  - col2: Welcome text  - Set avatar's dimensions to 80px X 80px  - Display spans within welcome text as block, so they stack vertically

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,13 +44,28 @@ input {
     display: flex;
 }
 
+/* .notification-bell {
+    width: 3rem;
+} */
+
 .action-bar {
     display: flex;
     justify-content: space-between;
 }
 
-.notification-bell {
-    width: 3rem;
+.user-greeting {
+    display: grid;
+    grid-template-columns: auto max-content;
+    align-items: center;
+}
+
+.user-greeting img {
+    width: 80px;
+    height: 80px;
+}
+
+.user-greeting h2 * {
+    display: block;
 }
 
 main {
