--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
     display: grid;
-    grid-template-areas: 
+    grid-template-areas:
         "sidebar header"
         "sidebar main";
     grid-template-rows: 1fr 4fr;
@@ -71,6 +71,19 @@ input {
 .action-bar .actions {
     display: flex;
     gap: 48px;
+    align-items: center;
+}
+
+.action-bar .actions li {
+    flex: 1;
+    min-width: 0;
+}
+
+.action-bar .actions button {
+    appearance: none;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 main {
