Revamp HTML and CSS
I noticed that I over-engineered my HTML, which worked against me when I
was trying to use Flexbox/Grid on descendant items. Specifically,
nesting items in ul-s instead of using basic divs created grandchildren
when I would rather have direct descendants. I restructured my
HTML to be more basic, and updated my CSS as well to adapt to the HTML
changes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,10 +14,9 @@ body {
     gap: 3rem;
 }
 
-.sidebar nav {
+nav {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
 }
 
 header {
@@ -64,24 +63,16 @@ input {
     height: 80px;
 }
 
-.user-greeting h2 * {
-    display: block;
-}
-
 .action-bar .actions {
     display: flex;
     gap: 48px;
     align-items: center;
 }
 
-.action-bar .actions li {
-    flex: 1;
-    min-width: 0;
-}
-
 .action-bar .actions button {
     appearance: none;
-    width: 100%;
+    flex: 1;
+    min-width: 0;
     display: flex;
     justify-content: center;
 }
