--- a/css/styles.css
+++ b/css/styles.css
@@ -43,9 +43,9 @@ input {
     display: flex;
 }
 
-/* .notification-bell {
+.notification-bell {
     width: 3rem;
-} */
+}
 
 .action-bar {
     display: flex;
