Implement main-content grid layout
'main' grid container holds:
 - row1: projects + announcements (1fr)
 - row2: projects + trending (1fr)

 - col1: projects (3fr)
 - col2: announcements + trending (1fr)

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,24 @@ input {
 
 main {
     grid-area: main;
+    display: grid;
+    grid-template-areas: 
+        "projects announcements"
+        "projects trending";
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 3fr 1fr;
+}
+
+.projects {
+    grid-area: projects;
+}
+
+.announcements {
+    grid-area: announcements;
+}
+
+.trending {
+    grid-area: trending;
 }
 
 /* Temporary constraint for avatar images during development */
