--- a/css/styles.css
+++ b/css/styles.css
@@ -93,10 +93,9 @@ main {
     flex-direction: column;
 }
 
-
 .projects .content {
     display: grid;
-    grid-template-columns: (auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
 
