Change project buttons gap from rem to px
Margins should not be relative

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ main {
 .projects article .actions {
     display: flex;
     align-self: flex-end;
-    gap: 1rem;
+    gap: 16px;
 }
 
 .projects article .actions>button {
