Add vertical flex layout to trending div

--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,8 @@ main {
 
 .trending {
     grid-area: trending;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Temporary constraint for avatar images during development */
