--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,11 @@ body {
     grid-template-columns: 1fr 4fr;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 .sidebar {
     grid-area: sidebar;
     display: flex;
