Add/Position corresponding SVG to dashboard h1

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,28 @@ a {
     grid-area: sidebar;
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 1rem;
+    padding: 16px 16px;
 }
 
 nav {
     display: flex;
     flex-direction: column;
+}
+
+Add/center corresponding SVG to dashboard h1
+.sidebar h1 {
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+
+.sidebar h1::before {
+    content: url("../images/dashboard.svg");
+    display: inline-block;
+    height: 2.5rem;
+    width: 2.5rem;
 }
 
 header {
@@ -148,7 +164,7 @@ main {
 
 .trending-users a {
     display: grid;
-    grid-template-areas: 
+    grid-template-areas:
         "avatar username"
         "avatar bio";
     grid-template-rows: repeat(4, 1fr);
