--- a/css/styles.css
+++ b/css/styles.css
@@ -14,15 +14,44 @@ a {
 
 .sidebar {
     grid-area: sidebar;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 16px 16px;
+    padding: 16px;
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 2.5rem auto;
+    grid-auto-rows: min-content;
 }
 
-nav {
+.sidebar img {
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+.sidebar h1 img {
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+.sidebar nav {
+    display: subgrid;
+    grid-column: 1 / -1;
+}
+
+.sidebar h1,
+.sidebar nav a {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    grid-column: 1 / -1;
+    margin-bottom: 1rem;
+}
+
+.sidebar h1 {
+    gap: .5rem;
+}
+
+.sidebar nav a {
+    margin-left: .5rem;
+    gap: 1rem;
 }
 
 header {
