--- a/css/styles.css
+++ b/css/styles.css
@@ -15,43 +15,34 @@ a {
 .sidebar {
     grid-area: sidebar;
     padding: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.sidebar nav {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.sidebar h1,
+.sidebar a {
     display: grid;
-    gap: 2rem;
     grid-template-columns: 2.5rem auto;
-    grid-auto-rows: min-content;
+    align-items: center;
+    gap: 1rem;
 }
 
 .sidebar img {
-    display: inline-block;
     width: 1.5rem;
     height: 1.5rem;
+    justify-self: center;
 }
 
 .sidebar h1 img {
     width: 2.5rem;
     height: 2.5rem;
-}
-
-.sidebar nav {
-    display: subgrid;
-    grid-column: 1 / -1;
-}
-
-.sidebar h1,
-.sidebar nav a {
-    display: flex;
-    align-items: center;
-    grid-column: 1 / -1;
-    margin-bottom: 1rem;
-}
-
-.sidebar h1 {
-    gap: .5rem;
-}
-
-.sidebar nav a {
-    margin-left: .5rem;
-    gap: 1rem;
 }
 
 header {
