--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,20 @@ a {
     text-decoration: none;
 }
 
+/* Commit 2:
+Update sidebar typography
+- Set h1 font-size to 2rem
+- Set navigation link font-size to 1.25rem  
+- Set navigation link font-weight to bold
+*/
 .sidebar {
     grid-area: sidebar;
     padding: 16px;
     display: flex;
     flex-direction: column;
     gap: 3rem;
+    background-color: rgb(0, 174, 255);
+    color: white;
 }
 
 .sidebar nav {
@@ -35,6 +43,7 @@ a {
 }
 
 .sidebar img {
+    filter: invert(1);
     width: 1.5rem;
     height: 1.5rem;
     justify-self: center;
