--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,37 @@ header {
     flex-direction: column;
 }
 
+/* 
+Set flex dimensions of system bar content
+
+ - Set search form to flex: auto with max-width: 60%
+   to grow/shrink content as needed
+ - Set user menu to flex: none, maintaining a consistent size
+ - Add space around content
+
+.system-bar {
+    display: flex;
+    justify-content: space-around;
+}
+
+.system-bar form {
+    flex: auto;
+    max-width: 60%;
+}
+
+.user-menu {
+    flex: none; 
+}
+*/
+/* 
+Set height of notification bell to 1.5rem X 1.5rem
+
+.notification-bell img {
+    height: 1.5rem;
+    width: 1.5rem;
+}
+*/
+
 .system-bar {
     display: flex;
     padding: 0 6rem;
@@ -71,6 +102,10 @@ header {
 
 form {
     width: 60%;
+    display: grid;
+    grid-template-columns: 1.25rem auto;
+    align-items: center;
+    gap: 16px;
 }
 
 input {
