Vertically center user menu items and add 1rem gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,8 @@ input {
 .user-menu {
     flex: none; 
     display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 
 .notification-bell img {
