Add padding and gap to header
 - top/bottom: 1rem
 - left/right: 2rem
 - gap: 1rem

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,8 +59,10 @@ a {
 
 header {
     grid-area: header;
+    padding: 1rem 2rem;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 }
 
 .system-bar {
