--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ header {
 
 .system-bar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 form {
