Remove default input styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,8 @@ a {
     text-decoration: none;
 }
 
-button {
+button,
+input {
     appearance: none;
     background-color: inherit;
     border: none;
