--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,8 @@ input:focus {
 }
 
 .user-greeting img {
-    width: 80px;
-    height: 80px;
+    width: 5rem;
+    height: 5rem;
 }
 
 .action-bar .actions {
