Change user-greeting from grid to flex layout
Originally was grid to separate welcome text and username in separate
columns, but it's easier to implement in flex.

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,8 +121,7 @@ input:focus {
 }
 
 .user-greeting {
-    display: grid;
-    grid-template-columns: auto max-content;
+    display: flex;
     align-items: center;
 }
 
