Update font-size for welcome text
 - welcome: .8rem
 - user-fullname: 1.5rem

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,14 @@ input:focus {
     height: 5rem;
 }
 
+.user-greeting h6 {
+    font-size: .8rem;
+}
+
+.user-greeting h2 {
+    font-size: 1.5rem;
+}
+
 .action-bar .actions {
     display: flex;
     gap: 1.5rem;
