--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,8 @@ input:focus {
 .action-bar .actions button {
     background-color: rgb(0, 174, 255);
     color: white;
+    padding: .75rem 1.75rem;
+    border-radius: 32px;
     flex: 1;
     min-width: 0;
     display: flex;
