--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,7 @@ input:focus {
     color: white;
     padding: .75rem 1.75rem;
     border-radius: 32px;
+    font-weight: 600;
     flex: 1;
     min-width: 0;
     display: flex;
