--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ form {
 input {
     padding: 0 1rem;
     border-radius: 16px;
-    background-color: lightgrey;
+    background-color: rgb(237, 237, 237);
     height: 80%;
     width: 100%;
 }
@@ -158,6 +158,7 @@ input:focus {
 }
 
 main {
+    background-color: rgb(237, 237, 237);
     grid-area: main;
     display: grid;
     grid-template-areas:
