Shrink h2 font size to 1.25rem within main

--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,10 @@ main {
     grid-template-columns: 3fr 1fr;
 }
 
+main h2 {
+    font-size: 1.25rem;
+}
+
 .projects {
     grid-area: projects;
     display: flex;
