Ensure that each project article is of equal height

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ main h2 {
 .projects .content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    /* grid-auto-rows: 1fr; */
+    grid-auto-rows: 1fr;
 }
 
 .projects article {
