Add 2rem gap between main content sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,7 @@ main {
         "projects trending";
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 3fr 1fr;
+    gap: 2rem;
 }
 
 main h2 {
