--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,7 @@ main h2 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-auto-rows: 1fr;
+    gap: 1rem;
 }
 
 .projects article {
