--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@ a {
     text-decoration: none;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 600;
+}
+
 button,
 input {
     appearance: none;
@@ -49,7 +53,7 @@ input {
 
 .sidebar nav a span {
     font-size: 1.25rem;
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .sidebar img {
@@ -172,7 +176,6 @@ main {
 
 main h2 {
     font-size: 1.25rem;
-    font-weight: 600;
 }
 
 .projects {
