--- a/css/styles.css
+++ b/css/styles.css
@@ -293,6 +293,7 @@ main h6 {
         "avatar username"
         "avatar bio";
     grid-template-rows: repeat(4, 1fr);
+    align-items: center;
 }
 
 .trending-users img {
