--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@ body {
     grid-template-areas:
         "sidebar header"
         "sidebar main";
-    grid-template-rows: 1fr 4fr;
-    grid-template-columns: 1fr 4fr;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: auto 1fr;
 }
 
 a {
@@ -36,6 +36,7 @@ input {
     border: none;
 }
 
+/* padding: 1rem 4rem 1rem 1rem; */
 .sidebar {
     grid-area: sidebar;
     padding: 16px;
