--- a/css/styles.css
+++ b/css/styles.css
@@ -36,10 +36,9 @@ input {
     border: none;
 }
 
-/* padding: 1rem 4rem 1rem 1rem; */
 .sidebar {
     grid-area: sidebar;
-    padding: 16px;
+    padding: 1rem 4rem 1rem 1rem;
     display: flex;
     flex-direction: column;
     gap: 3rem;
