--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,13 @@ h6 {
     height: 1.5rem;
 }
 
+header,
+.projects article,
+.announcements .content,
+.trending-users {
+    box-shadow: darkgray 2px 2px 5px;
+    z-index: 1;
+}
 
 button,
 input {
