--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,14 @@ h6 {
     font-weight: 600;
 }
 
+.avatar {
+    --avatar-size: 2.5rem;
+    width: var(--avatar-size);
+    height: var(--avatar-size);
+    border-radius: 50%;
+    object-fit: cover;
+}
+
 .sidebar img,
 .notification-bell img,
 .projects article .actions img {
@@ -143,9 +151,8 @@ input:focus {
     gap: 1rem;
 }
 
-.user-greeting img {
-    width: 5rem;
-    height: 5rem;
+.user-greeting .avatar {
+    --avatar-size: 5rem;
 }
 
 .user-greeting h6 {
@@ -315,12 +322,4 @@ main h6 {
 
 .trending-users h6 {
     grid-area: bio;
-}
-
-/* Temporary constraint for avatar images during development */
-.avatar {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
 }
